Iteration 3: recipe page content
Completed step 3 by adding an image of the burger, adding a description, ingredients, and step breakdown to make the food.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,36 @@
   <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/burger.html">Burger</a>
+    <img src="./images/burger.jpeg" alt="burger" />
+    <h2>Description</h2>
+    <p>
+      The recipe to make this burger is fairly simple. All you'll need is
+      sliched american cheese, ground turkey or beef, your choice of condiments,
+      and salt, black pepper, onion powder, paparika, & garlic powder.
+    </p>
+
+    <h2>Ingredients</h2>
+    <ul>
+      <li>Ground Turkey or Beef</li>
+      <li>American Cheese</li>
+      <li>Salt</li>
+      <li>Black Pepper</li>
+      <li>Onion Powder</li>
+      <li>Garlic Powder</li>
+      <li>Paparika</li>
+      <li>Burger Buns</li>
+      <li>Your choice of BBQ sauce, Ketchup, Mustard, etc...</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+      <li>Add ground turkey or beef to bowl</li>
+      <li>Add seasoning to meat</li>
+      <li>Mix seasoning into meat</li>
+      <li>Make meat into round balls</li>
+      <li>Turn on stove and place pan over top</li>
+      <li>Add oil to pan</li>
+      <li>Wait until oil heats up to add meat</li>
+    </ol>
   </body>
 </html>
