--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -1,1 +1,36 @@
-<h1>Burger</h1>
+<h1>Burger Recipe</h1>
+
+<img src="../images/burger.jpeg" alt="burger" />
+
+<h2>Description</h2>
+<p>
+  The recipe to make this burger is fairly simple. All you'll need is sliched
+  american cheese, ground turkey or beef, your choice of condiments, and salt,
+  black pepper, onion powder, paparika, & garlic powder.
+</p>
+
+<h3>Ingredients</h3>
+<ul>
+  <li>Ground Turkey or Beef</li>
+  <li>American Cheese</li>
+  <li>Salt</li>
+  <li>Black Pepper</li>
+  <li>Onion Powder</li>
+  <li>Garlic Powder</li>
+  <li>Paparika</li>
+  <li>Burger Buns</li>
+  <li>Your choice of BBQ sauce, Ketchup, Mustard, etc...</li>
+</ul>
+
+<h3>Steps</h3>
+<ol>
+  <li>Add ground turkey or beef to bowl</li>
+  <li>Add seasoning to meat</li>
+  <li>Mix seasoning into meat</li>
+  <li>Make meat into round balls</li>
+  <li>Turn on stove and place pan over top</li>
+  <li>Add oil to pan</li>
+  <li>Wait until oil heats up to add meat</li>
+</ol>
+
+<a href="../index.html">Home page</a>
